--- a/package.json
+++ b/package.json
@@ -37,12 +37,9 @@
   },
   "homepage": "https://github.com/ForceCalendar/force-calendar-ui#readme",
   "dependencies": {
-    "@forcecalendar/core": "^0.2.0"
+    "@forcecalendar/core": "github:ForceCalendar/force-calendar-core"
   },
   "devDependencies": {
     "vite": "^5.0.0"
-  },
-  "peerDependencies": {
-    "@forcecalendar/core": "^0.2.0"
   }
 }
