Update Vercel configuration for static deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,23 @@
 {
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "echo 'Skipping root install'",
-  "framework": null,
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/",
+      "destination": "/docs/index.html"
+    },
+    {
+      "source": "/test",
+      "destination": "/docs/test-calendar.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/src/(.*)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
     }
   ]
 }
