--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "echo \"No tests yet\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,11 @@
     "@forcecalendar/core": "^0.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "vite": "^5.0.0"
   }
 }
