--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest --testTimeout=10000"
   },
   "repository": {
     "type": "git",
