--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,16 +23,13 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
-        cache-dependency-path: interface/package-lock.json
+        cache-dependency-path: package-lock.json
 
     - name: Install dependencies
       run: npm ci
-      working-directory: interface
 
     - name: Build package
       run: npm run build
-      working-directory: interface
 
     - name: Run tests
       run: npm test
-      working-directory: interface
