Add benchmark trigger on publish

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -138,3 +138,15 @@ jobs:
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Trigger benchmark workflow
+      if: steps.check_version.outputs.exists == 'false'
+      run: |
+        curl -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.BENCHMARK_DISPATCH_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/forceCalendar/benchmark/dispatches \
+          -d '{"event_type":"package-published","client_payload":{"source":"interface","version":"${{ steps.version_bump.outputs.new_version }}"}}'
+        echo "Triggered benchmark workflow for interface@${{ steps.version_bump.outputs.new_version }}"
+      continue-on-error: true
